
180705 Martin Raden :
 + IntaRNA/PredictionTrackerProfileSpotProb : computes a profile for each 
   sequence position about the probability that a position is covered by an
   interaction (but not necessarily base paired within) = spot probability
 * IntaRNA/Makefile :
   + PredictionTrackerProfileSpotProb
 * bin/CommandLineParsing :
   + PredictionTrackerProfileSpotProb
   * '--out' argument :
     + q|tSpotProb : generate spot probability profile for query|target
   * getCodeForOutPrefix() :
     + parsing of "q|tSpotProb"
 * README.md : 
   + docu of spot probability profiles 

180627 Martin Raden / Milad Miladi :
 * adaption to VRNA v2.4.8

180328 Martin Raden :
 * IntaRNA/OutputHandlerCsv :
 * IntaRNA/OutputHandlerIntaRNA1 :
 * IntaRNA/OutputHandlerText :
     + data first written to local stream before pushed (via OMP critical) to
       final output stream. This should fix some multi-threading output issues.
 * IntaRNA/OutputHandlerText :
   + usage of reportedInteractions member
   * destructor() :
     + check if nothing was reported and provide according output
 * bin/CommandLineParsing :
   * "version" output extended with used VRNA and boost version
     
version 2.2.0

180319 Martin Raden :
 * IntaRNA/PredictorMfe2dHeuristic :
   * traceBack() :
     * bugfix: wrong sanity check in debug mode (thanks to Rick Gelhausen)
 * IntaRNA/Predictor :
   * updateOptima() :
     * bugfix: PredictionTracker call was not doing lastPos-handling
 * README.md : 
   + spotProb docu added
 + IntaRNA/PredictionTrackingSpotProb : tracks for a given set of interaction
   spots their probability to be covered/spanned by an interaction. furthermore,
   the probability that none of the spots of interest is covered is provided.
 + test/PredictionTrackingSpotProb
 * bin/CommandLineParsing :
   * OutputPrefixCodes :
     + OP_spotProb : for spotProb output mode
   + outSpotProbSpots : member to store the spots to be tracked (if provided)
   * --out argument :