@@ -351,14 +351,10 @@ traceBack( Interaction & interaction, const OutputConstraint & outConstraint  )
 
 #if INTARNA_IN_DEBUG_MODE
 	// sanity checks
-	if ( ! interaction.isValid() ) {
-		throw std::runtime_error("PredictorMfe4dSeed::traceBack() : given interaction not valid");
-	}
 	if ( interaction.basePairs.size() != 2 ) {
 		throw std::runtime_error("PredictorMfe4dSeed::traceBack() : given interaction does not contain boundaries only");
 	}
 #endif
-
 
 	// check for single interaction (start==end)
 	if (interaction.basePairs.begin()->first == interaction.basePairs.rbegin()->first) {
@@ -367,6 +363,13 @@ traceBack( Interaction & interaction, const OutputConstraint & outConstraint  )
 		// update done
 		return;
 	}
+
+#if INTARNA_IN_DEBUG_MODE
+	// sanity checks
+	if ( ! interaction.isValid() ) {
+		throw std::runtime_error("PredictorMfe4dSeed::traceBack() : given interaction not valid");
+	}
+#endif
 
 	// ensure sorting
 	interaction.sort();
